# smartports-ship-classification

./: .gitignore  README.md  pyproject.toml
P1-Material/: ship.csv
data/: docked.csv
notebooks/: analysis.ipynb  eda.ipynb
outputs/results/: convnext_augFalse_docked_results.csv  convnext_augFalse_ship_results.csv  convnext_augTrue_docked_results.csv  convnext_augTrue_ship_results.csv  resnet18_augFalse_docked_results.csv  resnet18_augFalse_ship_results.csv  resnet18_augTrue_docked_results.csv  resnet18_augTrue_ship_results.csv  simplecnn_augFalse_docked_results.csv  simplecnn_augFalse_ship_results.csv  simplecnn_augTrue_docked_results.csv  simplecnn_augTrue_ship_results.csv
report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
scripts/: organize_outputs.py  run_docked.py  run_ship.py  run_transfer.py
src/smartports/: dataset.py  evaluate.py  experiment.py  models.py  train.py  transforms.py
